@@ -1,4 +1,9 @@
-﻿drkns 15.01.2016 23:27:57 +0200 - build 4511
+﻿drkns 16.01.2016 11:46:23 +0200 - build 4512
+
+1. 0002953: When the tree3.far cache file exists, calling the tree dialog (Alt-F10) crashes Far manager
+   class Panel - это просто праздник какой-то, там есть всё. Даже то, чего там быть не должно по определению.
+
+drkns 15.01.2016 23:27:57 +0200 - build 4511
 
 1. 0003153: Стартовать следующий сеанс грабера в режиме предыдущего (прямоугольный/поточный)
 
